--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 <body onload="iniciarApp()">
-
+<h1>Generador de Excusas</h1>
       <p id="excuse"></p>
+      <div class="boton">
+      <button onclick="iniciarApp()">
+        Haz click para generar una excusa
+      </button>
+      </div>
 </body>
 </html>
